--- a/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/pexcel/records/build.xml
+++ b/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/pexcel/records/build.xml
@@ -52,7 +52,7 @@
  #
  #
  -->
-<project name="xmrg_jooxcxsp_Records" default="main" basedir=".">
+<project name="xmrg_jooxcxsp_records" default="main" basedir=".">
 
     <!-- ================================================================= -->
     <!-- settings                                                          -->
@@ -62,7 +62,7 @@
     <property name="prj.prefix" value="xmrg"/>
 
     <!-- name of this sub target used in recursive builds -->
-    <property name="target" value="xmrg_jooxcxsp_Records"/>
+    <property name="target" value="xmrg_jooxcxsp_records"/>
 
     <!-- relative path to project directory -->
     <property name="prj" value="../../../../../../../../.."/>
@@ -72,7 +72,7 @@
 
     <!-- path component for current java package -->
     <property name="package"
-              value="org/openoffice/xmerge/converter/xml/sxc/pexcel/Records"/>
+              value="org/openoffice/xmerge/converter/xml/sxc/pexcel/records"/>
 
     <!-- define how to handle CLASSPATH environment -->
     <property name="build.sysclasspath" value="ignore"/>
