#i8810# Update to include EmbeddedObject.java, EmbeddedBinaryObject.java and EmebeddedXMLObject.java in the build for this package.

--- a/xmerge/java/org/openoffice/xmerge/converter/xml/build.xml
+++ b/xmerge/java/org/openoffice/xmerge/converter/xml/build.xml
@@ -135,6 +135,9 @@
                deprecation="${deprecation}"
                optimize="${optimize}">
             <classpath refid="classpath"/>
+                        <include name="${package}/EmbeddedObject.java"/>
+                        <include name="${package}/EmbeddedBinaryObject.java"/>
+                        <include name="${package}/EmbeddedXMLObject.java"/>
             <include name="${package}/OfficeConstants.java"/>
             <include name="${package}/OfficeZip.java"/>
             <include name="${package}/OfficeDocument.java"/>
