Initial checkin of the NameDefinition class

--- a/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/build.xml
+++ b/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/build.xml
@@ -137,6 +137,7 @@
             <classpath refid="classpath"/>
             <include name="${package}/SxcDocument.java"/>
             <include name="${package}/Format.java"/>
+            <include name="${package}/NameDefinition.java"/>
             <include name="${package}/SpreadsheetDecoder.java"/>
             <include name="${package}/SpreadsheetEncoder.java"/>
             <include name="${package}/SxcDocumentDeserializer.java"/>
