--- a/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/build.xml
+++ b/xmerge/java/org/openoffice/xmerge/converter/xml/sxc/build.xml
@@ -135,6 +135,7 @@
                deprecation="${deprecation}"
                optimize="${optimize}">
             <classpath refid="classpath"/>
+            <include name="${package}/CellType.java"/>
             <include name="${package}/SxcConstants.java"/>
             <include name="${package}/SxcDocument.java"/>
             <include name="${package}/Format.java"/>
